Fix coloring in some subreddit flair buttons to stay within accessibility contrast principles

--- a/src/containers/SubredditPage/SubredditPage.scss
+++ b/src/containers/SubredditPage/SubredditPage.scss
@@ -375,7 +375,7 @@
         gap: 6px;
         width: 310px;
         flex-wrap: wrap;
-        width: 94%;
+        width: 93.5%;
         padding: 16px 10px 20px 10px !important;
 
         .flair {
